--- a/pagina1.html
+++ b/pagina1.html
@@ -6,5 +6,9 @@
     <BODY>
        <h1>ejemplo de hit</h1>
        <h2>ejemplo de hit</h2>
+       <h2>esta es otra rama en hit... cambio
+           solo en esta rama...
+       </h2>
+
     </BODY>
 </HTML>
